<resources>
    <string name="app_name">aa2020</string>
    <string name="back">Back</string>
    <string name="rating">13+</string>
    <string name="avengers_end_game">Avengers:
        End&#160;Game</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="_125_reviews">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="after_the_devastating">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey&#160;Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="_137_min">137 MIN</string>
    <string name="no_data">No Data</string>
    <string name="pg_text">%d+</string>
    <string name="reviews_text">%d Reviews</string>
    <string name="movie_len_text">%d MIN</string>
    <string name="error_loading_movies">Error loading movies: %s</string>
    <string name="channel_new_movie">New movie</string>
    <string name="channel_new_movie_description">Notifies about new movies</string>
    <string name="there_is_a_new_movie">There is a new movie!</string>
    <string name="movie_item_transition_name">movie_%d</string>
    <string name="details_fragment_transition_name">details</string>
</resources>