<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/title_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/orig"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:textSize="12sp"
            android:alpha="0.5"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/title_image"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avengers_end_game"
            android:textColor="@color/title_text"
            android:textStyle="bold"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_image"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <TextView
            android:id="@+id/tag_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/tag_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <ImageView
            android:id="@+id/star1_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintTop_toBottomOf="@id/tag_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:tint="@color/red_star" />

        <ImageView
            android:id="@+id/star2_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/star1_image"
            app:layout_constraintTop_toTopOf="@id/star1_image"
            app:tint="@color/red_star"/>

        <ImageView
            android:id="@+id/star3_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/star2_image"
            app:layout_constraintTop_toTopOf="@id/star2_image"
            app:tint="@color/red_star"/>

        <ImageView
            android:id="@+id/star4_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/star3_image"
            app:layout_constraintTop_toTopOf="@id/star3_image"
            app:tint="@color/red_star"/>

        <ImageView
            android:id="@+id/star5_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/star4_image"
            app:layout_constraintTop_toTopOf="@id/star4_image"
            app:tint="@color/blank_star"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/_125_reviews"
            android:textColor="@color/reviews_text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/star5_image"
            app:layout_constraintTop_toTopOf="@id/star5_image"
            app:layout_constraintBottom_toBottomOf="@id/star5_image" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storyline"
            android:textColor="@color/title_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/star1_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            />

        <TextView
            android:id="@+id/storyline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/after_the_devastating"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/storyline_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"
            android:alpha="0.75"
            />

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textColor="@color/title_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/storyline_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            />

        <ImageView
            android:id="@+id/actor1_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/actor1"
            app:layout_constraintTop_toBottomOf="@id/cast_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/actor2_image"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/actor1_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/actor_name"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/actor1_image"
            app:layout_constraintStart_toStartOf="@id/actor1_image"
            app:layout_constraintEnd_toEndOf="@id/actor1_image"
            />

        <ImageView
            android:id="@+id/actor2_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/actor2"
            app:layout_constraintTop_toTopOf="@id/actor1_image"
            app:layout_constraintStart_toEndOf="@id/actor1_image"
            app:layout_constraintEnd_toStartOf="@id/actor3_image"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/actor2_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_evans"
            android:textColor="@color/actor_name"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/actor2_image"
            app:layout_constraintStart_toStartOf="@id/actor2_image"
            app:layout_constraintEnd_toEndOf="@id/actor2_image"
            />

        <ImageView
            android:id="@+id/actor3_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/actor3"
            app:layout_constraintTop_toTopOf="@id/actor2_image"
            app:layout_constraintStart_toEndOf="@id/actor2_image"
            app:layout_constraintEnd_toStartOf="@id/actor4_image"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/actor3_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/actor_name"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/actor3_image"
            app:layout_constraintStart_toStartOf="@id/actor3_image"
            app:layout_constraintEnd_toEndOf="@id/actor3_image"
            />

        <ImageView
            android:id="@+id/actor4_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/actor4"
            app:layout_constraintTop_toTopOf="@id/actor3_image"
            app:layout_constraintStart_toEndOf="@id/actor3_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/actor4_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/actor_name"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/actor4_image"
            app:layout_constraintStart_toStartOf="@id/actor4_image"
            app:layout_constraintEnd_toEndOf="@id/actor4_image"
            app:layout_constraintBottom_toTopOf="@id/barrierBottom"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="actor1_name, actor2_name, actor3_name, actor4_name"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintTop_toBottomOf="@id/barrierBottom"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>