<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/title_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/orig"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:alpha="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_arrow_left" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            style="@style/text_rating"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintBottom_toBottomOf="@id/title_image"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers_end_game"
            style="@style/text_movie_title"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintTop_toBottomOf="@id/title_image"
            />

        <TextView
            android:id="@+id/tag_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_adventure_fantasy"
            style="@style/text_movie_tag"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            />

        <ImageView
            android:id="@+id/star1_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintTop_toBottomOf="@id/tag_text"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            android:layout_marginTop="8dp"
            app:tint="@color/red_star" />

        <ImageView
            android:id="@+id/star2_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/star1_image"
            app:layout_constraintTop_toTopOf="@id/star1_image"
            app:tint="@color/red_star"/>

        <ImageView
            android:id="@+id/star3_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/star2_image"
            app:layout_constraintTop_toTopOf="@id/star2_image"
            app:tint="@color/red_star"/>

        <ImageView
            android:id="@+id/star4_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/star3_image"
            app:layout_constraintTop_toTopOf="@id/star3_image"
            app:tint="@color/red_star"/>

        <ImageView
            android:id="@+id/star5_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/star4_image"
            app:layout_constraintTop_toTopOf="@id/star4_image"
            app:tint="@color/blank_star"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/_125_reviews"
            style="@style/text_movie_reviews"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/star5_image"
            app:layout_constraintTop_toTopOf="@id/star5_image"
            app:layout_constraintBottom_toBottomOf="@id/star5_image" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storyline"
            style="@style/text_title_small"
            app:layout_constraintTop_toBottomOf="@id/star1_image"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            android:layout_marginTop="24dp"
            />

        <TextView
            android:id="@+id/storyline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/after_the_devastating"
            style="@style/text_storyline"
            android:alpha="0.75"
            app:layout_constraintTop_toBottomOf="@id/storyline_title"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            android:layout_marginTop="4dp"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"
            />

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            style="@style/text_title_small"
            app:layout_constraintTop_toBottomOf="@id/storyline_text"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            android:layout_marginTop="24dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/cast_title"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            tools:listitem="@layout/view_holder_actor"
            tools:itemCount="4"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintTop_toBottomOf="@id/actors_list"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>